<resources>
    <string name="app_name">Vithamas GloSmart</string>
    <string name="action_settings">Settings</string>
    <string name="str_dashboard_title">Vithamas</string>
    <string name="alert_exit">Are you sure you want to exit?</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported in this device.</string>
    <string name="speech_prompt">Speak color name which you want to change color</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="str_logout_confirmation">Are you sure you want to logout?</string>
    <string name="str_server_error_try_again">Server connection error. Please try again.</string>
    <string name="str_server_error_someting_wrong">Something went wrong. Please try again.</string>
    <string name="str_no_more_data_found">No more data found.</string>
    <string name="str_no_internet_connection">No internet connection.</string>
    <string name="str_logout_success">User logout successfully.</string>
    <string name="str_ok">OK</string>
    <string name="str_exit">Exit</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_done">Done</string>
    <string name="str_back">Back</string>
    <string name="str_next">Next</string>
    <string name="str_change">Change</string>
    <string name="str_choose_option">Choose Option</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_view_photo">View Photo</string>
    <string name="str_submit">Submit</string>
    <string name="str_verify">Verify</string>
    <string name="str_send">Send</string>
    <string name="str_view">View</string>
    <string name="str_share">Share</string>
    <string name="str_save">Save</string>
    <string name="str_start">Start</string>
    <string name="str_stop">Stop</string>
    <string name="str_delete">Delete</string>
    <string name="str_camera">Camera</string>
    <string name="str_gallery">Gallery</string>
    <string name="str_call">Call</string>
    <string name="str_logout">Logout</string>
    <string name="str_remove">Remove</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="developed_by">Vithamas Technologies</string>
    <string name="str_skip">SKIP</string>
    <string name="str_sign_up">Sign Up</string>
    <string name="str_sign_up_name">Name</string>
    <string name="str_sign_up_business_name">Business Name</string>
    <string name="str_sign_up_mobile_no">Mobile No.</string>
    <string name="str_sign_up_username">Name</string>
    <string name="str_sign_up_account_name">Account Name(e.g. Home, Office)</string>
    <string name="str_sign_up_email_address">Email (Optional)</string>
    <string name="str_sign_up_address">Address</string>
    <string name="str_sign_up_enter_name">Enter your name</string>
    <string name="str_sign_up_enter_account_name">Enter your account name</string>
    <string name="str_sign_up_enter_business_name">Enter business name</string>
    <string name="str_sign_up_enter_email_address">Enter email address</string>
    <string name="str_sign_up_enter_valid_email_address">Enter valid email address</string>
    <string name="str_sign_up_enter_mobile_no">Enter your mobile no</string>
    <string name="str_sign_up_enter_valid_mobile_no">Mobile no should be 10 to 15 digit.</string>
    <string name="str_sign_up_enter_valid_password">Password should be 6 to 15 digit.</string>
    <string name="str_sign_up_enter_address">Enter address</string>
    <string name="str_sign_up_enter_password">Enter your password</string>
    <string name="str_sign_up_enname">Enter your name</string>
    <string name="str_register">Submit</string>
    <string name="str_profile_updated_success">Profile updated successfully.</string>
    <string name="str_sign_up_already_account">Already have an account? SignIn here</string>
    <string name="str_sign_up_i_agree">I agree to </string>
    <string name="str_sign_up_terms_condition">Terms &amp; Condition</string>
    <string name="str_sign_up_agree_terms_condition">Please agree to terms and condition</string>
    <string name="str_sign_up_already_register">%1$s this mobile no is already registered. Please register with different mobile no.</string>
    <string name="str_verify_account">Mobile Verification</string>
    <string name="str_verify_account_verify">Submit</string>
    <string name="str_verify_account_enter_pin">Please enter 6 digit OTP code.</string>
    <string name="str_verify_account_lable_pin">Enter your 6 digit verification OTP code which sent SMS on .</string>
    <string name="str_verify_account_not_receive_otp">Didn\'t receive the OTP?</string>
    <string name="str_verify_account_resend_otp">Resend OTP</string>
    <string name="str_verify_account_confirm_resend_otp">Are you sure you want resend OTP?</string>
    <string name="str_verify_account_exit_confirm">Are you sure want to exit without verification?</string>
    <string name="str_verify_account_authentication_code_fail">Authentication code is not sent. Please wait some time and try again.</string>
    <string name="str_verify_account_otp_code_fail">OTP code is not sent. Please wait for some time.</string>
    <string name="str_verify_account_invalid_otp_code">Incorrect OTP. Please enter correct OTP.</string>
    <string name="str_sign">Sign In</string>
    <string name="str_login_email_address">Email</string>
    <string name="str_login_password">Password</string>
    <string name="str_login">Login</string>
    <string name="str_login_forgot_password">Forgot your password?</string>
    <string name="str_login_enter_password">Please enter your password</string>
    <string name="str_password_link">Your password change successfully.</string>
    <string name="str_login_dont_account">Don\'t have an account? Sign Up here</string>
    <string name="str_login_remember_pw">Remember Me</string>
    <string name="str_login_already_login_user">This user is already logged in. Please add another user</string>
    <string name="str_term_and_condition_title">Terms And Condition</string>
    <string name="str_password_title">Set New Password</string>
    <string name="str_password_exit_confirm">Are you sure want to exit without reset password?</string>
    <string name="str_forgot_password">Forgot Password</string>
    <string name="str_forgot_password_lbl">Enter your registered mobile no to get new password</string>
    <string name="str_forgot_new_password">New Password</string>
    <string name="str_forgot_confirm_password">Confirm Password</string>
    <string name="str_forgot_enter_new_password">Enter new password</string>
    <string name="str_forgot_enter_confirm_password">Enter confirm password</string>
    <string name="str_select_country_code">Please select your country code.</string>
    <string name="str_forgot_password_tag_label">Enter your registered mobile no and country code. We will send you OTP on registered mobile no after verification you can change your password.</string>
    <string name="str_forgot_password_mobile_not_register">%1$s this mobile no is not registered. Please enter registered mobile no.</string>
    <string name="frg_tab_devices">Devices</string>
    <string name="frg_tab_groups">Rooms</string>
    <string name="activity_main_menu_dashboard">Home</string>
    <string name="activity_main_menu_settings">Settings</string>
    <string name="activity_main_menu_favourite">Favourites</string>
    <string name="activity_main_menu_alarm">My Routine for SmartLight</string>
    <string name="activity_main_menu_device_setting">Device Settings</string>
    <string name="activity_main_menu_account">Account</string>
    <string name="activity_main_menu_buy">Buy Now</string>
    <string name="activity_main_menu_help">Help</string>
    <string name="activity_main_menu_demo_videos">Demo Videos</string>
    <string name="activity_main_menu_about_us">About Us</string>
    <string name="activity_main_menu_contact_us">Contact Us</string>
    <string name="str_session_expired">Authentication session expired. Please login again.</string>
    <string name="frg_device_no_device_found">No devices found. Tap on + button to add device.</string>
    <string name="frg_device_add_device">Add Device</string>
    <string name="frg_device_delete_device">Delete Device</string>
    <string name="frg_device_delete_confirmation">Are you sure you want to remove device?</string>
    <string name="frg_device_not_delete_without_internet">You can\'t delete this device without internet.</string>
    <string name="frg_device_not_delete">Device is not deleted. Please try again.</string>
    <string name="frg_device_delete_success">Device deleted successfully.</string>
    <string name="frg_device_not_reset_without_internet">You can\'t reset all device without internet. Check your internet connection and try again.</string>
    <string name="frg_no_device_added_in_account">No any device added in your account. so you can\'t delete.</string>
    <string name="frg_all_device_deleted_success">All devices deleted successfully.</string>
    <string name="frg_group_no_group_found">No rooms found. Tap on + button to add new rooms.</string>
    <string name="frg_group_add_group">Add Rooms</string>
    <string name="frg_group_new_group">New Rooms</string>
    <string name="frg_group_delete_group">Rooms deleted successfully.</string>
    <string name="frg_group_cant_delete_group">There is few devices which are not in range. So we can\'t delete this rooms now.</string>
    <string name="frg_group_not_delete_group">Rooms device is not deleted. Please try again.</string>
    <string name="frg_group_all_devices">All Devices</string>
    <string name="frg_group_delete_group_alert">Delete Rooms</string>
    <string name="frg_group_select_un_select_lbl">Select/Deselect Devices</string>
    <string name="frg_add_device_header">Add Device</string>
    <string name="frg_add_power_socket_header">Add Power Socket</string>
    <string name="frg_add_device_add">Tap on add button to add device.</string>
    <string name="frg_add_device_btn_add">Add</string>
    <string name="frg_add_device_btn_remove">Remove</string>
    <string name="str_no_any_device_connect">Not able to connect to device. Try connecting manually from device connection.</string>
    <string name="str_no_any_device_added">Device is not added. Please try again.</string>
    <string name="str_device_added_success">Device has been added successfully.</string>
    <string name="str_device_name_already_exist">This device name already exist. Please try different name.</string>
    <string name="str_enter_device_name">Please enter device name</string>
    <string name="frg_add_device_tag">Long press on device list to identify device.</string>
    <string name="frg_add_group_header">Add Rooms</string>
    <string name="frg_edit_group_header">Edit Rooms</string>
    <string name="frg_add_group_btn_save">Save</string>
    <string name="frg_add_group_enter_group_name">Rooms Name (eg. bedroom, kitchen..)</string>
    <string name="frg_add_group_enter_room_name_alert">Please enter room name</string>
    <string name="frg_add_group_select_device">Please select at least on device in room</string>
    <string name="str_title_device_setting">Main Power On Setting</string>
    <string name="str_cool_white">Cool White</string>
    <string name="str_last_set_color">Last Set Color</string>
    <string name="str_warm_white">Warm White</string>
    <string name="str_mood_lighting">Mood Lightning</string>
    <string name="frg_device_set_color_tab_wheel">Color</string>
    <string name="frg_device_set_color_tab_solid">Custom</string>
    <string name="frg_device_set_color_tab_white">White</string>
    <string name="frg_device_set_color_tab_voice">Voice</string>
</resources>