<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popup_device_setting_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/_15sdp"
    android:layout_marginRight="@dimen/_15sdp"
    android:background="@color/colorSemiTransparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:elevation="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@color/colorBlueTheme"
                android:elevation="@dimen/_5sdp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:padding="@dimen/_10sdp"
                android:text="@string/str_title_device_setting"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/_10sdp">

                <RadioGroup
                    android:id="@+id/popup_device_setting_rg_power_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:checkedButton="@+id/radioBtnApp"
                    android:gravity="left"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/_5sdp"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingTop="@dimen/_5sdp">

                    <RadioButton
                        android:id="@+id/popup_device_setting_rb_cool_white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:buttonTint="@color/colorBlack"
                        android:checked="true"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/str_cool_white"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_14sdp" />

                    <RadioButton
                        android:id="@+id/popup_device_setting_rb_last_set_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:buttonTint="@color/colorBlack"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/str_last_set_color"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_14sdp" />

                    <RadioButton
                        android:id="@+id/popup_device_setting_rb_warm_white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:buttonTint="@color/colorBlack"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/str_warm_white"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_14sdp" />

                    <RadioButton
                        android:id="@+id/popup_device_setting_rb_mood_lighting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:buttonTint="@color/colorBlack"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/str_mood_lighting"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_14sdp" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/popup_device_setting_btn_cancel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorBlueTheme"
                        android:text="@string/str_cancel"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_12sdp" />

                    <Button
                        android:id="@+id/popup_device_setting_btn_save"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:layout_weight="1"
                        android:background="@color/colorBlueTheme"
                        android:text="@string/str_save"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
