<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/popup_forgot_password_main_layout"
    android:background="@color/colorSemiTransparent"
    android:layout_marginLeft="@dimen/_15sdp"
    android:layout_marginRight="@dimen/_15sdp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:elevation="@dimen/_5sdp"
        app:cardUseCompatPadding="false"
        app:cardPreventCornerOverlap="false"
        app:cardCornerRadius="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@color/colorBlueTheme"
                android:elevation="@dimen/_5sdp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:padding="@dimen/_10sdp"
                android:text="@string/str_login_forgot_password"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/_15sdp">

                <TextView
                    android:id="@+id/popup_forgot_password_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:elevation="@dimen/_5sdp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/str_forgot_password_lbl"
                    android:textColor="@color/colorGrayText"
                    android:textSize="@dimen/_12sdp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/str_sign_up_mobile_no"
                    android:theme="@style/MyEditTextBlack">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/popup_forgot_pw_edittext_mobileno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="number|textNoSuggestions"
                        android:maxLength="15"
                        android:maxLines="1"
                        android:textColor="@color/colorAppTheam"
                        android:textColorHint="@color/colorGrayText"
                        android:textSize="@dimen/_14sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/popup_forgot_pw_buttton_cancal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorBlueTheme"
                        android:text="@string/str_cancel"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_12sdp" />

                    <Button
                        android:id="@+id/popup_forgot_pw_buttton_send"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:layout_weight="1"
                        android:background="@color/colorBlueTheme"
                        android:text="@string/str_send"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
