<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/activity_set_password_rl_main"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_screen_bg" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorTransparentBG"></RelativeLayout>

    <RelativeLayout
        android:id="@+id/activity_set_pw_relativelayout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingRight="@dimen/_5sdp"
        android:paddingTop="@dimen/_20sdp">

        <ImageView
            android:id="@+id/activity_set_pw_imageview_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/arrow_left" />

        <TextView
            android:id="@+id/activity_set_pw_textview_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="right"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/str_password_title"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14sdp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/activity_set_pw_relativelayout_header"
        android:layout_centerInParent="true"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:hint="@string/str_forgot_new_password"
                android:theme="@style/MyEditTextWhite"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorWhite">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/activity_set_password_edittext_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhiteLight"
                    android:textSize="@dimen/_14sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/str_forgot_confirm_password"
                android:theme="@style/MyEditTextWhite"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorWhite">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/activity_set_password_edittext_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhiteLight"
                    android:textSize="@dimen/_14sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/activity_set_password_button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/rounded_corner_button"
                android:text="@string/str_save"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
